Dark mode and non-FF fixes

--- a/src/Accounts/Steam.css
+++ b/src/Accounts/Steam.css
@@ -1,3 +1,3 @@
 .steam {
-  background-color: #182332;
+  background-color: #1f283c;
 }
