--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,8 @@
 
   max-width: 100%;
   height: 800px;
-  background-color: snow;
+  color: white;
+  background-color: #181818;
 
   border-radius: 25px;
   padding: 20px;
@@ -29,4 +30,5 @@ h1 {
   margin-top: 2em;
   margin-bottom: 2em;
   border-bottom: 1px solid black;
+  background-color: white;
 }
