--- a/src/common.css
+++ b/src/common.css
@@ -3,7 +3,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: red;
+  color: #266a2e;
   text-align: center;
-  font-size: 200%;
+  font-size: 400%;
+  text-shadow: -1px 1px 2px #23430c, 1px 1px 2px #23430c, 1px -1px 0 #23430c, -1px -1px 0 #23430c;
+}
+
+.error {
+  color: red;
+  overflow-wrap: break-word;
 }
